--- a/activities/slamina/index.html
+++ b/activities/slamina/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" type="text/css" href="css/style.css" />
 
     <!-- Library script(s) -->
+    <script src="https://code.responsivevoice.org/responsivevoice.js"></script>
     <script src="js/libraries/p5.min.js"></script>
     <script src="js/libraries/p5.sound.min.js"></script>
 
