--- a/activities/slamina/index.html
+++ b/activities/slamina/index.html
@@ -10,7 +10,8 @@
     <link rel="stylesheet" type="text/css" href="css/style.css" />
 
     <!-- Library script(s) -->
-    <script src="https://code.responsivevoice.org/responsivevoice.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/annyang/2.6.0/annyang.min.js"></script>
+    <script src="https://code.responsivevoice.org/responsivevoice.js?key=PCtgWdUO"></script>
     <script src="js/libraries/p5.min.js"></script>
     <script src="js/libraries/p5.sound.min.js"></script>
 
