--- a/activities/05-haiku-generator/index.html
+++ b/activities/05-haiku-generator/index.html
@@ -13,12 +13,18 @@
     <script src="js/libraries/p5.min.js"></script>
     <script src="js/libraries/p5.sound.min.js"></script>
 
-    <!-- My script(s) -->
-    <script src="js/script.js"></script>
   </head>
 
   <body>
-    <!-- HTML would go here if needed. -->
+
+    <section id="haiku">
+      <p id="line-1"></p>
+      <p id="line-2"></p>
+      <p id="line-3"></p>
+    </section>
+
+    <!-- My script(s) -->
+    <script src="js/script.js"></script>
   </body>
 
 </html>
