--- a/activities/07-code-taker/index.html
+++ b/activities/07-code-taker/index.html
@@ -18,7 +18,39 @@
   </head>
 
   <body>
-    <!-- HTML would go here if needed. -->
+    <!-- The poem, secret letters are in spans with class "secret" -->
+    <section id="poem">
+      <h2><span class="secret">T</span>his Is Just To Say</h2>
+      <p>
+        I <span class="secret">h</span>ave eaten<br />
+        the plums<br />
+        that wer<span class="secret">e</span> in<br />
+        the icebox
+      </p>
+      <p>
+        and which<br />
+        you we<span class="secret">r</span>e probably<br />
+        saving<br />
+        for br<span class="secret">e</span>akfast
+      </p>
+      <p>
+        Forgive <span class="secret">m</span>e<br />
+        they were del<span class="secret">i</span>cious<br />
+        so sweet<br />
+        a<span class="secret">n</span>d so cold
+      </p>
+      <h4>William Carlos Williams</h4>
+    </section>
+
+    <!-- The secret answer area-->
+    <section id="answer"></section>
+    
+    <!-- The win condition dialog box -->
+    <div id="solved-dialog" title="Da Vinci?!">
+      <p>
+        You are soooooo smart!
+      </p>
+    </div>
 
     <!-- My script(s) -->
     <script src="js/script.js"></script>
