--- a/activities/08-desperately-seeking-sadness/index.html
+++ b/activities/08-desperately-seeking-sadness/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
 
-    <title>seeking sadness</title>
+    <title>seeking sadness...</title>
 
     <!-- CSS stylesheet(s) -->
     <link rel="stylesheet" type="text/css" href="css/style.css" />
@@ -14,12 +14,16 @@
     <script src="js/libraries/p5.sound.min.js"></script>
     <script src="//cdn.jsdelivr.net/npm/phaser@3.55.2/dist/phaser.min.js"></script>
 
-    <!-- My script(s) -->
-    <script src="js/script.js"></script>
+
   </head>
 
   <body>
     <!-- HTML would go here if needed. -->
+
+    <!-- My script(s) -->
+    <script src="js/Boot.js"></script>
+    <script src="js/Play.js"></script>
+    <script src="js/main.js"></script>
   </body>
 
 </html>
